BIS-2459: Build from release module